--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".raspisanieActivity"></activity>
+        <activity android:name=".NotDoneActivity"></activity>
+        <activity android:name=".raspisanieActivity" />
         <activity android:name=".TextEditorActivity" />
         <activity android:name=".TextNotesActivity" />
         <activity android:name=".EditorActivity" />
