--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NotDoneActivity"></activity>
+        <service
+            android:name=".NotificationService"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity android:name=".NotDoneActivity" />
         <activity android:name=".raspisanieActivity" />
         <activity android:name=".TextEditorActivity" />
         <activity android:name=".TextNotesActivity" />
